--- a/cloud-services/admin-services/src/main/resources/templates/main/footer.html
+++ b/cloud-services/admin-services/src/main/resources/templates/main/footer.html
@@ -3,8 +3,8 @@
 <footer class="main-footer">
     <!-- To the right -->
     <div class="pull-right hidden-xs">
-         springboot应用开发项目组
+    
     </div>
     <!-- Default to the left -->
-    版权所有 -- 翔恒科技有限公司
+    版权所有 -- 
 </footer>
